# monist

./: .gitattributes  .gitignore  Cargo.toml  README.md  history.txt  list_gpus.rs
.github/workflows/: deploy-docs.yml
benches/monist-bench-cpu/: Cargo.toml
benches/monist-bench-cpu/benches/: acyclic_profile.rs  k_iteration.rs  token_passing.rs
benches/monist-bench-gpu/: Cargo.toml
benches/monist-bench-gpu/benches/: discrete_gpu_dispatch.rs  holographic_swarm.rs  knaster_tarski.rs  latbol_simulation.rs  ocl_bridge.rs
crates/monist-category/: Cargo.toml
crates/monist-category/src/: adjunctions.rs  lib.rs  retractions.rs  spe.rs  yoneda.rs
crates/monist-category/tests/: forster_challenge_test.rs
crates/monist-comb/: Cargo.toml  README.md
crates/monist-comb/src/: ast.rs  backend.rs  compile.rs  ir.rs  lib.rs  reduce.wgsl
crates/monist-comb/src/comblib/: cardinal.rs  encodings.rs  frege_russell.rs  holographic.rs  mod.rs  quine.rs  vsa_embed.rs
crates/monist-comb/tests/: integration_test.rs
crates/monist-core/: README.md
crates/monist-core/src/: ast.rs  budget.rs  eval.rs  graph.rs  lib.rs  smt.rs
crates/monist-macros/src/: lib.rs
crates/monist-parser/: README.md
crates/monist-parser/src/: lexer.rs  lib.rs  parser.rs
crates/monist-parser/tests/: fuzz_limits.rs
crates/monist-psg/: Cargo.toml  README.md
crates/monist-psg/src/: dmm.rs  dts.rs  lib.rs  psg.rs
crates/monist-python/: Cargo.toml
crates/monist-python/src/: lib.rs
crates/monist-python/tests/: test_eval.py
crates/monist-seq/: Cargo.toml  README.md
crates/monist-seq/examples/: distributivity_lr.rs  subset_transitivity.rs
crates/monist-seq/src/: itp.rs  lib.rs  telemetry.rs
crates/monist-verify/: Cargo.toml  README.md
crates/monist-verify/src/: atomic.rs  memory.rs  trace.rs
crates/monist-wasm/: Cargo.toml
crates/monist-wasm/src/: lib.rs
docs/: 01-architecture.html  01-architecture.qmd  02-cli-guide.html  02-cli-guide.qmd  03-benchmarks.html  03-examples-and-primitives.html  03-examples-and-primitives.qmd  04-interaction-net.html  04-interaction-net.qmd  05-examples-and-primitives.html  05-holographic.html  05-holographic.qmd  06-benchmarks.html  06-benchmarks.qmd  07-proofs.html  07-proofs.qmd  08-advanced-synthetic-applications.html  08-advanced-synthetic-applications.qmd  09-theoretical-foundations.html  09-theoretical-foundations.qmd  10-mathematical-philosophy.html  10-mathematical-philosophy.qmd  BENCHMARKS.md  CLI_GUIDE.md  PROOFS.md  _quarto.yml  index.html  index.qmd  search.json
monist-bench-cpu/: Cargo.toml
monist-bench-cpu/benches/: acyclic_profile.rs  k_iteration.rs  token_passing.rs
monist-bench-gpu/: Cargo.toml
monist-bench-gpu/benches/: holographic_swarm.rs  latbol_simulation.rs
monist-category/src/: adjunctions.rs  lib.rs  spe.rs
monist-cli/: Cargo.toml
monist-cli/src/: main.rs
monist-comb/: Cargo.toml
monist-comb/src/: ast.rs  backend.rs  compile.rs  lib.rs  translate.rs
monist-comb/src/comblib/: holographic.rs  quine.rs
monist-comb/tests/: integration_test.rs
monist-core/: Cargo.toml
monist-core/src/: ast.rs  eval.rs  graph.rs  lib.rs
monist-examples/: Cargo.toml
monist-macros/: Cargo.toml
monist-macros/src/: lib.rs
monist-parser/: Cargo.toml
monist-parser/src/: lib.rs  parser.rs
monist-seq/src/: telemetry.rs
monist-verify/src/: lib.rs
scripts/: run_differential_tests.sh
tools/monist-cli/: Cargo.toml
tools/monist-cli/src/: demos.rs  main.rs
tools/monist-console/: index.html  package-lock.json  package.json  vite.config.ts
tools/monist-console/src/: App.tsx  GuidedTutorial.tsx  ReplConsole.css  ReplConsole.tsx  SyntaxToolkit.tsx  index.css  worker.ts
tools/monist-examples/: Cargo.toml
