[workspace]
members = [
    "crates/monist-core",
    "crates/monist-comb",
    "crates/monist-parser",
    "crates/monist-seq",
    "crates/monist-category",
    "crates/monist-psg",
    "crates/monist-macros",
    "crates/monist-verify",
    "tools/monist-cli",
    "tools/monist-examples",
    "benches/monist-bench-cpu",
    "benches/monist-bench-gpu"
]
resolver = "2"
