[package]
name = "monist-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
monist-core = { path = "../../crates/monist-core" }
monist-comb = { path = "../../crates/monist-comb" }
monist-category = { path = "../../crates/monist-category" }
monist-verify = { version = "0.1.0", path = "../../crates/monist-verify" }
monist-parser = { version = "0.1.0", path = "../../crates/monist-parser" }
indicatif = "0.18.4"

[[bin]]
name = "russell"
path = "src/bin/russell.rs"

[[bin]]
name = "holographic_sieve"
path = "src/bin/holographic_sieve.rs"

[[bin]]
name = "transfinite"
path = "src/bin/transfinite.rs"

[[bin]]
name = "collider_simulation"
path = "src/bin/collider_simulation.rs"

[[bin]]
name = "smt_k_iteration"
path = "src/bin/smt_k_iteration.rs"

[[bin]]
name = "extensionality_collision"
path = "src/bin/extensionality_collision.rs"

[[bin]]
name = "repl_tactic_integration"
path = "src/bin/repl_tactic_integration.rs"

[[bin]]
name = "burali_forti"
path = "src/bin/burali_forti.rs"

[[bin]]
name = "ai_alignment_playbook"
path = "src/bin/ai_alignment_playbook.rs"

[[bin]]
name = "experimental_database_playbook"
path = "src/bin/experimental_database_playbook.rs"



