[package]
name = "monist-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
monist-core = { path = "../../crates/monist-core" }
monist-comb = { path = "../../crates/monist-comb" }
monist-category = { path = "../../crates/monist-category" }
monist-verify = { version = "0.1.0", path = "../../crates/monist-verify" }
monist-parser = { version = "0.1.0", path = "../../crates/monist-parser" }
indicatif = "0.18.4"
wgpu = "0.19.4"
bytemuck = "1.25.0"
rand = "0.10.1"
rand_distr = "0.6.0"
pollster = "0.4.0"

[[bin]]
name = "russell"
path = "src/bin/russell.rs"

[[bin]]
name = "holographic_sieve"
path = "src/bin/holographic_sieve.rs"

[[bin]]
name = "transfinite"
path = "src/bin/transfinite.rs"

[[bin]]
name = "collider_simulation"
path = "src/bin/collider_simulation.rs"

[[bin]]
name = "smt_k_iteration"
path = "src/bin/smt_k_iteration.rs"

[[bin]]
name = "extensionality_collision"
path = "src/bin/extensionality_collision.rs"

[[bin]]
name = "repl_tactic_integration"
path = "src/bin/repl_tactic_integration.rs"

[[bin]]
name = "burali_forti"
path = "src/bin/burali_forti.rs"

[[bin]]
name = "ai_alignment_playbook"
path = "src/bin/ai_alignment_playbook.rs"

[[bin]]
name = "experimental_database_playbook"
path = "src/bin/experimental_database_playbook.rs"

[[bin]]
name = "incomparable_cardinals"
path = "src/bin/incomparable_cardinals.rs"

[[bin]]
name = "strongly_cantorian"
path = "src/bin/strongly_cantorian.rs"

[[bin]]
name = "knaster_tarski_data_exec"
path = "src/bin/knaster_tarski_data_exec.rs"

[[bin]]
name = "proteomic_autocatalysis"
path = "src/bin/proteomic_autocatalysis.rs"

[[bin]]
name = "holographic_genomic_sieve"
path = "src/bin/holographic_genomic_sieve.rs"
